<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="@dimen/news_card_padding"

    >

    <!--Header -->

    <LinearLayout
        android:id="@+id/news_card_header_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:id="@+id/news_card_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titre_carte"
            android:textSize="@dimen/news_card_title_size" />


        <LinearLayout
            android:id="@+id/news_card_header_infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/news_infos_margin_top"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_people_black_18dp" />

                <TextView
                    android:id="@+id/news_card_header_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/un_auteur" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/news_infos_distance">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access_alarm_black_18dp" />

                <TextView
                    android:id="@+id/news_card_header_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="datetime"
                    android:text="@string/une_date" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <!--Image -->
    <ImageView
        android:id="@+id/news_card_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/news_card_image_height"
        android:src="@drawable/pc_logo" />


    <!--Controll -->
    <LinearLayout
        android:id="@+id/news_card_controll_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/news_card_controll_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_book_black_18dp"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_action" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/news_card_controll_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_black_18dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_action" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>